# ANIE

./: CMakeLists.txt
include/anie/: activation_layer.hpp  anie.hpp  async.hpp  config.hpp  device.hpp  layer.hpp  network.hpp
include/anie/activation_layers/: activation_layers.hpp  sigmoid_layer.hpp
include/anie/details/: kernels.hpp
include/anie/math/: math.hpp  matrix.hpp
include/anie/utility/: stream_utility.hpp  utility.hpp
src/: activation_layer.cpp  device.cpp  layer.cpp  network.cpp
src/activation_layers/: sigmoid_layer.cpp
src/details/: kernels.cpp
src/math/: matrix.cpp
src/utility/: stream_utility.cpp
